--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My fast Website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <h1>Hello</h1>
+    <time></time>
+    <h2>Hello</h2>
+    <label for="disk">pg</label>
+    <meter id="disk" value=".5"></meter>
+    <progress id=""></progress>
+    <details>
+        <summary>Hello World</summary>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, et.</p>
+    </details>
+
 </body>
 </html>
