fony second part

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello</h1>
+    <h1>Hello</h1> 
     <time></time>
     <h2>Hello</h2>
     <label for="disk">pg</label>
@@ -17,6 +17,9 @@
         <summary>Hello World</summary>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam, et.</p>
     </details>
-
+        <div class="container">
+        <div class="box">1</div>
+        <div class="box box2">2</div> <div class="box box3">3</div>
+    </div>
 </body>
 </html>
