--- a/text.html
+++ b/text.html
@@ -22,7 +22,6 @@
                 </div>
             </div>
         </nav>
-        .
     </header>
     <main>
         <!-- this is a benar section -->
@@ -38,6 +37,23 @@
                 </div>
             </div>
         </section>
+        
+            <!-- this is a about section -->
+        <section>
+            <h1 class="about-title" >About Us</h1>
+            <div class="about-container">
+                <div class="about-img">
+                    <img class="photo" src="./images/section.png" alt="">
+                </div>
+                <div class="about-text">
+                    <h3>We grow brands though bold & strategic creative</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ipsa!</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor, ipsa!</p>
+                    <button class="button"> Contact us</button>
+                </div>
+            </div>
+        </section>
+        
     </main>
     <footer>
 
