--- a/text.html
+++ b/text.html
@@ -53,6 +53,29 @@
                 </div>
             </div>
         </section>
+        <section class="service-container">
+            <h1 class="service-title">Our Service's</h1>
+            <div class="service">
+                <div class="card">
+                    <img class="icon" src="./images/0.png" alt="">
+                    <h2>Digital Art</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus hic doloremque deserunt? Deleniti doloremque quia dolores sint </p>
+                    <button class="button1"> details  </button>
+                </div>
+                <div class="card">
+                    <img class="icon" src="./images/1.png" alt="">
+                    <h2>Digital Art</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus hic doloremque deserunt? Deleniti doloremque quia dolores sint </p>
+                    <button class="button1"> details  </button>
+                </div>
+                <div class="card">
+                    <img class="icon" src="./images/2.png" alt="">
+                    <h2>Digital Art</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus hic doloremque deserunt? Deleniti doloremque quia dolores sint </p>
+                    <button class="button1"> details  </button>
+                </div>
+            </div>
+        </section>
         
     </main>
     <footer>
